--- a/markup/app/scss/utils/_variables.scss
+++ b/markup/app/scss/utils/_variables.scss
@@ -4,7 +4,7 @@ $breakpoints: (
     desktop: 1024px
 );
 
-$main-font-regular: 'robotoregular', Arial, Helvetica, sans-serif;
+$main-font-regular: 'Roboto', Arial, Helvetica, sans-serif;
 
 $main-font-bold: 'robotobold', Arial, Helvetica, sans-serif;
 
