--- a/markup/app/scss/base/_fonts.scss
+++ b/markup/app/scss/base/_fonts.scss
@@ -1,46 +1,14 @@
-@font-face {
-    font-family: 'fira_sansbold';
-    src: url('../fonts/firasans-bold-webfont.woff2') format('woff2'),
-         url('../fonts/firasans-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700&subset=cyrillic,cyrillic-ext');
 
-}
-
-@font-face {
-    font-family: 'robotobold';
-    src: url('../fonts/roboto-bold-webfont.woff2') format('woff2'),
-         url('../fonts/roboto-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'robotolight';
-    src: url('../fonts/roboto-light-webfont.woff2') format('woff2'),
-         url('../fonts/roboto-light-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'robotoregular';
-    src: url('../fonts/roboto-regular-webfont.woff2') format('woff2'),
-         url('../fonts/roboto-regular-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
-}
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&subset=cyrillic,cyrillic-ext');
 
 @font-face {
     font-family: 'icomoon';
     src: url('../fonts/icomoon.eot?uhc4hh');
     src: url('../fonts/icomoon.eot?uhc4hh#iefix') format('embedded-opentype'),
-         url('../fonts/icomoon.ttf?uhc4hh') format('truetype'),
-         url('../fonts/icomoon.woff?uhc4hh') format('woff'),
-         url('../fonts/icomoon.svg?uhc4hh#icomoon') format('svg');
+    url('../fonts/icomoon.ttf?uhc4hh') format('truetype'),
+    url('../fonts/icomoon.woff?uhc4hh') format('woff'),
+    url('../fonts/icomoon.svg?uhc4hh#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
 }
