--- a/markup/app/scss/components/_logo.scss
+++ b/markup/app/scss/components/_logo.scss
@@ -10,6 +10,6 @@
         color: $yel-color;
         text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
         text-transform: uppercase;
-        font-family: 'fira_sansbold', Arial, Helvetica, sans-serif;
+        font-family: 'Fira Sans', Arial, Helvetica, sans-serif;
     }
 }
