--- a/markup/app/scss/components/_navigation.scss
+++ b/markup/app/scss/components/_navigation.scss
@@ -5,6 +5,12 @@
     font-size: 30px;
     text-transform: uppercase;
     font-weight: lighter;
+    @include media('<desktop'){
+        font-size: 25px;
+    }
+    @include media('<tablet'){
+        display: none;
+    }
     .nav-item {
         display: inline-block;
         border-right: 1px solid #fff;
@@ -24,4 +30,33 @@
             text-decoration: overline;
         }
     }
+}
+.nav-list-active{
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background-color: #848484;
+}
+
+.hidden-menu {
+    position: absolute;
+    top: 0;
+    right: 15px;
+    display: none;
+    width: 30px;
+    height: 30px;
+    @include media('<tablet'){
+        display: block;
+    }
+}
+
+.hidden-menu-item {
+    width: 30px;
+    height: 5px;
+    margin: 0 0 5px;
+    background: #fff;
+    cursor: pointer;
+    transform-origin: 0 0;
 }
