--- a/markup/app/scss/layouts/_main.scss
+++ b/markup/app/scss/layouts/_main.scss
@@ -2,19 +2,44 @@
     @include limiter;
     display: flex;
     align-items: flex-start;
+    @include media('<=tablet'){
+        flex-direction: column;
+    }
 }
 
 .main-content {
     flex: 1;
     padding: 82px 30px 30px 0;
+    @include media('<=tablet'){
+        padding: 30px 0;
+    }
 }
-.main-block{
+
+.main-block {
     margin: 0 0 100px;
+    @include media('<=tablet'){
+        margin: 0 0 20px;
+    }
 }
+
+.main-address-block {
+    margin: 0 0 20px;
+}
+
+.main-address [class^="icon-"] {
+    color: #ffea00;
+    font-size: 2.7rem;
+    margin: 0 12px 0 0;
+}
+
 .main-title {
-    margin: 0 0 56px;
+    margin: 0 0 60px;
     text-transform: uppercase;
     font-size: 30px;
+    @include media('<=tablet'){
+        font-size: 25px;
+        margin: 0 0 20px;
+    }
 
 }
 
@@ -32,6 +57,13 @@
         height: 3px;
     }
 }
-.main-txt{
-    margin: 0 0 80px;
+
+.main-txt {
+    margin: 0 0 24px;
+    line-height: 26px;
+}
+
+#map {
+    width: 100%;
+    height: 430px;
 }
