--- a/markup/app/scss/base/_fonts.scss
+++ b/markup/app/scss/base/_fonts.scss
@@ -3,40 +3,40 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700&subset=cyrillic,cyrillic-ext');
 
 @font-face {
-    font-family: 'icomoon';
-    src: url('../fonts/icomoon.eot?uhc4hh');
-    src: url('../fonts/icomoon.eot?uhc4hh#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?uhc4hh') format('truetype'),
-    url('../fonts/icomoon.woff?uhc4hh') format('woff'),
-    url('../fonts/icomoon.svg?uhc4hh#icomoon') format('svg');
-    font-weight: normal;
-    font-style: normal;
+  font-family: 'icomoon';
+  src:  url('../fonts/icomoon.eot?s9os9b');
+  src:  url('../fonts/icomoon.eot?s9os9b#iefix') format('embedded-opentype'),
+        url('../fonts/icomoon.ttf?s9os9b') format('truetype'),
+        url('../fonts/icomoon.woff?s9os9b') format('woff'),
+        url('../fonts/icomoon.svg?s9os9b#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'icomoon' !important;
-    speak: none;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
 
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cross:before {
+  content: "\e903";
+}
 .icon-right-arrow:before {
-    content: "\e900";
+  content: "\e900";
 }
-
 .icon-left-arrow:before {
-    content: "\e901";
+  content: "\e901";
 }
-
 .icon-map-pointer:before {
-    content: "\e902";
+  content: "\e902";
 }
