--- a/markup/app/scss/components/_logo.scss
+++ b/markup/app/scss/components/_logo.scss
@@ -1,15 +1,23 @@
 .logo-holder {
-    .logo-name {
-        font-size: 2rem;
-        color: #fff;
-        text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+    margin: 0;
+    @include media('<tablet') {
+        text-align: center;
     }
-    .logo-place {
-        display: block;
-        font-size: 4.8rem;
-        color: $yel-color;
-        text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
-        text-transform: uppercase;
-        font-family: 'Fira Sans', Arial, Helvetica, sans-serif;
-    }
+}
+.logo-name {
+    font-size: 2rem;
+    color: #fff;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+}
+.logo-place {
+    display: block;
+    font-size: 4.8rem;
+    color: $yel-color;
+    text-shadow: 1px 1px 5px rgba(0, 0, 0, .45);
+    text-transform: uppercase;
+    font-family: 'Fira Sans', Arial, Helvetica, sans-serif;
+}
+.logo-link {
+    color: inherit;
+    text-decoration: none;
 }
