--- a/markup/app/scss/components/_modal.scss
+++ b/markup/app/scss/components/_modal.scss
@@ -1,18 +1,17 @@
 #modal-form {
-    width: 200px;
-    height: 200px;
+    width: 300px;
     border-radius: 10px;
     border: 3px #000 solid;
     background: #fff;
     position: fixed;
-    top: 45%;
     left: 50%;
-    margin-top: -100px;
-    margin-left: -100px;
+    margin-left: -150px;
+    margin-top: -25vh;
     display: none;
     opacity: 0;
     z-index: 5;
-    padding: 30px 10px;
+    padding: 18px;
+    text-align: left;
 }
 
 #modal-close {
@@ -34,14 +33,4 @@
     left: 0;
     cursor: pointer;
     display: none;
-}
-
-.modal-txt {
-    margin: 0;
-    line-height: 140px;
-    text-align: center;
-    font-size: 30px;
-    text-transform: uppercase;
-    color: red;
-    font-weight: bold;
 }
