--- a/markup/app/scss/components/_navigation.scss
+++ b/markup/app/scss/components/_navigation.scss
@@ -1,3 +1,8 @@
+.nav-holder {
+    @include media('<tablet'){
+        text-align: center;
+    }
+}
 .nav-list {
     margin: 0 0 32px;
     padding: 0;
@@ -5,11 +10,9 @@
     font-size: 30px;
     text-transform: uppercase;
     font-weight: lighter;
-    @include media('<desktop'){
+    @include media('<desktop') {
         font-size: 25px;
-    }
-    @include media('<tablet'){
-        display: none;
+        margin: 0 0 22px;
     }
     .nav-item {
         display: inline-block;
@@ -22,6 +25,12 @@
             margin: 0;
             padding: 0;
         }
+        @include media('<phone') {
+            margin-right: 0;
+            padding-right: 0;
+            border: 0;
+            display: block;
+        }
     }
     a {
         text-decoration: none;
@@ -30,33 +39,4 @@
             text-decoration: overline;
         }
     }
-}
-.nav-list-active{
-    display: block;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    width: 100%;
-    background-color: #848484;
-}
-
-.hidden-menu {
-    position: absolute;
-    top: 0;
-    right: 15px;
-    display: none;
-    width: 30px;
-    height: 30px;
-    @include media('<tablet'){
-        display: block;
-    }
-}
-
-.hidden-menu-item {
-    width: 30px;
-    height: 5px;
-    margin: 0 0 5px;
-    background: #fff;
-    cursor: pointer;
-    transform-origin: 0 0;
 }
