--- a/markup/app/scss/components/_sidebar.scss
+++ b/markup/app/scss/components/_sidebar.scss
@@ -21,9 +21,12 @@
             position: static;
         }
     }
-    .main-title{
-        margin: 0 0 30px;
-    }
+}
+
+.sidebar-title {
+    margin: 0 0 30px;
+    text-transform: uppercase;
+    font-size: 30px;
 }
 
 .sidebar-list{
